# gaming-unit-controller

./: Jenkinsfile  README.md  conanfile.txt  setup.CodeLite.Default.Native.Debug.sh  setup.Release.sh  setupCodeLite.sh
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt
Source/App/Controller/: CMakeLists.txt
Source/App/Controller/etc/: App.Utility.Controller.Logger.xml
Source/App/Controller/include/: CProgramController.h
Source/App/Controller/source/: CProgramController.cpp  main.cpp
Source/Infrastructure/: CMakeLists.txt
Source/Infrastructure/API/: CMakeLists.txt
Source/Infrastructure/API/include/: IProcess.h  ISignalHandler.h  ISystem.h
Source/Infrastructure/API/source/: ISignalHandler.cpp
Source/Infrastructure/Common/: CMakeLists.txt
Source/Infrastructure/Common/include/: System.h
Source/Infrastructure/Common/source/: Logger.cpp  System.cpp
Source/Infrastructure/Linux/: CMakeLists.txt
Source/Infrastructure/Linux/include/: CProcess.h  CSignalHandler.h  CSystem.h
Source/Infrastructure/Linux/source/: CProcess.cpp  CSystem.cpp
Source/Infrastructure/Mock/: CMakeLists.txt
Source/Infrastructure/Mock/include/: CProcess.h  CSystem.h
Source/Lib/: CMakeLists.txt
Source/Lib/Controller/: CMakeLists.txt
Source/Lib/Controller/include/: CCounter.h  CMatcher.h  CMatcherFactory.h  CMatchingRule.h  CRule.h  CStatistics.h  CUnitCounter.h  CUnitCounterFactory.h  IMatcher.h  IUnitCounter.h  Types.h
Source/Lib/Controller/source/: CCounter.cpp  CMatcher.cpp  CMatcherFactory.cpp  CMatchingRule.cpp  CRule.cpp  CStatistics.cpp  CUnitCounter.cpp  CUnitCounterFactory.cpp  IMatcher.cpp  IUnitCounter.cpp
Source/Lib/ControllerTest/: CMakeLists.txt
Source/Lib/ControllerTest/source/: CounterTest.cpp  MatcherTest.cpp
Source/Lib/Infrastructure/API/: CMakeLists.txt
Source/Lib/Infrastructure/API/include/: IProcess.h  ISystem.h
Source/Lib/Infrastructure/API/source/: IProcess.cpp
Source/Lib/Infrastructure/Linux/: CMakeLists.txt
Source/Lib/Infrastructure/Linux/include/: CProcess.h  CSystem.h
Source/Lib/Infrastructure/Linux/source/: CProcess.cpp  CSystem.cpp
Source/Utility/: CMakeLists.txt
Source/Utility/ProgramController/: CMakeLists.txt
Source/Utility/ProgramController/Common/: CMakeLists.txt
Source/Utility/ProgramController/Common/include/: CMatcher.h  CMatcherFactory.h  CMatchingRule.h  CProgramController.h  CUnitCounterFactory.h  IMatcher.h  IUnitCounter.h
Source/Utility/ProgramController/Common/source/: CMatcher.cpp  CMatchingRule.cpp  CProgramController.cpp  CRunningStrategy.cpp  CStatistics.cpp  CUnitCounter.cpp  IMatcher.cpp
Source/Utility/ProgramController/Test/: CMakeLists.txt
Source/Utility/ProgramController/Test/source/: CounterTest.cpp  MatcherTest.cpp
Source/Utility/ProgramController/UI/: CMakeLists.txt
Source/Utility/ProgramController/UI/etc/: Utility.ProgramController  Utility.ProgramController.LoggerConfig.xml
Source/Utility/ProgramController/UI/include/: CProgramController.h
Source/Utility/ProgramController/UI/source/: CProgramController.cpp  main.cpp
Source/gsc/: CMakeLists.txt
Source/gsc/etc/: gsc  gsc.config.xml  gsc.logger.xml
Source/gsc/source/: main.cpp
Source/gsclib/: CMakeLists.txt
Source/gsclib/api/: CMakeLists.txt
Source/gsclib/api/include/: IMatcher.h  IMatchingRule.h  IRunningStrategy.h  IUnitCounter.h
Source/gsclib/api/source/: IMatcher.cpp  IMatchingRule.cpp  IUnitCounter.cpp
Source/gsclib/common/: CMakeLists.txt
Source/gsclib/common/include/: CInfluxAdapter.h  CMatcher.h  CMatcherFactory.h  CMatchingRule.h  CRunningStrategy.h  CSessionController.h  CStatistics.h  CUnitCounter.h  CUnitCounterFactory.h  IMatcher.h  IRunningStrategy.h  IUnitCounter.h
Source/gsclib/common/source/: CInfluxAdapter.cpp  CMatcher.cpp  CMatchingRule.cpp  CRunningStrategy.cpp  CSessionController.cpp  CStatistics.cpp  CUnitCounter.cpp  CUnitCounterFactory.cpp  IMatcher.cpp  IUnitCounter.cpp
Source/gsclib/infrastructure/: CMakeLists.txt
Source/gsclib/infrastructure/api/: CMakeLists.txt
Source/gsclib/infrastructure/api/source/: IProcess.cpp
Source/gsclib/infrastructure/common/: CMakeLists.txt
Source/gsclib/infrastructure/linux/: CMakeLists.txt
Source/gsclib/infrastructure/mock/: CMakeLists.txt
Source/gsclib/test/: CMakeLists.txt
Source/gsclib/test/source/: CounterTest.cpp  MatcherTest.cpp
Source/gsclib/utility/: CMakeLists.txt
Source/gsclib/utility/source/: TimeUtility.cpp
Source/guc/: CMakeLists.txt
Source/guc/etc/: Utility.ProgramController
Source/guc/source/: main.cpp
Source/guclib/: CMakeLists.txt
Source/guclib/common/: CMakeLists.txt
Source/guclib/common/include/: CMatcher.h  CMatchingRule.h  CProgramController.h  CRunningStrategy.h  CStatistics.h  CUnitCounter.h  IMatcher.h  IRunningStrategy.h
Source/guclib/common/source/: CMatcher.cpp  CMatcherFactory.cpp  CProgramController.cpp  CStatistics.cpp  CUnitCounterFactory.cpp  IUnitCounter.cpp
Source/guclib/infrastructure/: CMakeLists.txt
Source/guclib/infrastructure/api/: CMakeLists.txt
Source/guclib/infrastructure/common/: CMakeLists.txt
Source/guclib/infrastructure/linux/: CMakeLists.txt
Source/guclib/infrastructure/mock/: CMakeLists.txt
Source/guclib/test/: CMakeLists.txt
Source/guclib/test/source/: CounterTest.cpp  MatcherTest.cpp
source/: CMakeLists.txt
source/gsc/: CMakeLists.txt
source/gsc/etc/: gsc  gsc.config.xml
source/gsc/source/: main.cpp
source/gsclib/api/: CMakeLists.txt
source/gsclib/api/include/: IMatcher.h  IMatchingRule.h
source/gsclib/api/source/: IMatcher.cpp  IUnitCounter.cpp
source/gsclib/common/: CMakeLists.txt
source/gsclib/common/include/: CMatcher.h  CMatcherFactory.h  CMatchingRule.h  CSessionController.h  CStatistics.h  CUnitCounter.h
source/gsclib/common/source/: CInfluxAdapter.cpp  CMatcher.cpp  CMatcherFactory.cpp  CSessionController.cpp  CUnitCounter.cpp  CUnitCounterFactory.cpp
source/gsclib/infrastructure/common/: CMakeLists.txt
source/gsclib/test/: CMakeLists.txt
source/gsclib/test/source/: CounterTest.cpp  InfluxAdapterTest.cpp  main.cpp
(+30 files in other folders)
