CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Infrastructure.API)

AUX_SOURCE_DIRECTORY(source PROJECT_SOURCE)
file(GLOB PROJECT_INCLUDES "include/*.h")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_SOURCE} ${PROJECT_INCLUDES})
#ADD_LIBRARY(${PROJECT_NAME}_s STATIC ${PROJECT_SOURCE} ${PROJECT_INCLUDES})
