CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(guclib.common)

AUX_SOURCE_DIRECTORY(source PROJECT_SOURCE)
file(GLOB PROJECT_INCLUDES "include/*.h")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${PROJECT_SOURCE} ${PROJECT_INCLUDES})
target_link_libraries(${PROJECT_NAME} guclib.infrastructure.api ${Log4cxx_LIBRARIES} ${Boost_LIBRARIES})
