CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Utility.ProgramController.Common)

AUX_SOURCE_DIRECTORY(source PROJECT_SOURCE)
file(GLOB PROJECT_INCLUDES "include/*.h")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_SOURCE} ${PROJECT_INCLUDES})
target_link_libraries(${PROJECT_NAME} Infrastructure.API ${Log4cxx_LIBRARIES} ${Boost_LIBRARIES})
